isolate settings of mbp with takari